--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,11 @@
         <activity
             android:name=".Activities.FlowControlActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="adjustResize|stateHidden" >
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden" >
         </activity>
         <activity
             android:name=".Activities.SettingsActivity"
+            android:windowSoftInputMode="stateAlwaysHidden"
             android:label="@string/title_activity_settings" >
         </activity>
         <activity
